Fixed sample slider fullscreen image overlap

--- a/index.css
+++ b/index.css
@@ -559,7 +559,7 @@ body.active::after {
   width: 100%;
   max-width: 1000px;
   overflow: hidden;
-  margin: 0 auto;
+  margin: 0.25rem auto 0;
   /* border: 1px solid var(--clr-med-lighter); */
 }
 
@@ -716,7 +716,6 @@ body.active::after {
 }
 
 /* Expanded slider feature */
-
 .expand-slider-icon {
   color: var(--clr-med-new);
   display: none;
@@ -788,7 +787,7 @@ body.active::after {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: -1rem auto 0;
+    margin: -0.5rem auto 0;
     padding: 0;
     overflow: visible;
     background: white;
@@ -799,7 +798,6 @@ body.active::after {
   }
 
   .slider-container.expand .slide {
-    /* margin: 0 auto; */
     padding-bottom: 0;
     width: 100%;
   }
@@ -838,13 +836,13 @@ body.active::after {
   .slider-container.expand .dots {
     height: 3rem;
     padding: 0;
-    margin: 1.25rem auto 2rem;
+    margin: 0.875rem auto 2rem;
   }
 
   .slider-container.expand .slider-btn {
     position: fixed;
     font-size: 2.75rem;
-    top: 45%;
+    top: 46.5%;
     transform: translate(0, -50%);
   }
 
@@ -1068,7 +1066,7 @@ body.active::after {
 
   .about-side-text {
     padding: 0;
-    padding-top: 1.5rem;
+    padding-top: 2rem;
   }
 }
 
@@ -1509,10 +1507,10 @@ ul.tier--list {
   }
 
   /* Fullscreen sample view */
-  /* .sample-slider-container.expand .is-invisible,
+  .sample-slider-container.expand .is-invisible,
   .sample-slider-container-2.expand .is-invisible {
     opacity: 1;
-  } */
+  }
 
   .sample-close-icon,
   .sample-close-icon-2 {
@@ -1555,11 +1553,12 @@ ul.tier--list {
 
   .sample-slider-container.expand .sample-slider,
   .sample-slider-container-2.expand .sample-slider-2 {
-    width: 100%;
     height: auto;
-    margin: auto;
+    width: 100%;
+    width: 100%;
+    max-width: 900px;
     overflow: hidden;
-    background: white;
+    margin: 0 auto;
   }
 
   .sample-slider-container.expand .sample-slider--track,
@@ -1573,8 +1572,8 @@ ul.tier--list {
     position: absolute;
     top: 0;
     bottom: 0;
-    max-width: 100%;
-    height: 100%;
+    width: 100%;
+    height: auto;
     transition: opacity 350ms;
   }
 
@@ -1598,7 +1597,7 @@ ul.tier--list {
   .sample-slider-container-2.expand .sample-slider--nav-dots-2 {
     height: 4rem;
     padding: 1rem;
-    padding-top: 2rem;
+    padding-top: 1.5rem;
     margin: 0 auto;
   }
 
